<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/orange_light"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_with_name"
        android:textAlignment="center"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="130dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/add_recipe_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtRecipeName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTile"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btnAddIngredients"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E91E63"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtIngredients"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_recipe_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddRecipe"
        app:layout_constraintTop_toBottomOf="@+id/txtTile"
        app:layout_constraintVertical_bias="0.001" />

    <EditText
        android:id="@+id/edtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/add_ingredients"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddIngredients"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeName"
        app:layout_constraintVertical_bias="0.018" />

    <EditText
        android:id="@+id/edtInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/add_instructions"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddInstructions"
        app:layout_constraintTop_toBottomOf="@+id/edtIngredients"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/btnAddInstructions"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E91E63"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtInstructions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredients"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtViewRecipeArea"
        android:layout_width="0dp"
        android:layout_height="318dp"
        android:layout_marginTop="28dp"
        android:background="#F1EBEB"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtInstructions"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnAddInstructions"
        app:layout_constraintTop_toBottomOf="@+id/edtInstructions"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:backgroundTint="#E91E63"
        android:text="@string/save_recipe"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtViewRecipeArea"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRecipeArea" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#E91E63"
        android:text="@string/clear_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSaveRecipe"
        app:layout_constraintTop_toBottomOf="@+id/txtViewRecipeArea" />
</androidx.constraintlayout.widget.ConstraintLayout>